test/fail/template-page-clash.app
//#2 Multiple page/template definitions with name 'theName'
application test

page root {}

page theName {}

template theName {}
